# pyri-webui-server

./: README.md  pyproject.toml  setup.py
src/pyri/webui_server/: __main__.py  blockly_router.py  blockly_standard_toolbox.json  sandbox_functions_router.py  service_node_launch.py  webui_resource_router.py  webui_server.py
src/pyri/webui_server/webui_static/: index.html  loader.css  pyri_blockly_workspace.html  pyri_blockly_workspace.js  pyri_editor.html  pyri_editor.js  style.css  webui_bootstrap.js  webui_bootstrap.py  webui_main.py
