[project]

name = "pyri-webui-server"
version = "0.3.0"
description = "PyRI Teach Pendant WebUI Server"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["pyodide", "pyri-project", "pyri-runtime-package", "robotics"]
authors = [
    {name = "John Wason", email = "wason@wasontech.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering"
]

dependencies = [
    'pyri-common',
    'pyri-webui-resources',
    'sanic',
    'importlib-resources==5.13.0',
    'appdirs'  
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio"
]

[project.urls]
homepage="http://pyri.tech"
repository="https://github.com/pyri-project/pyri-webui-server"

[project.scripts]
pyri-webui-server = "pyri.webui_server.__main__:main"

[project.entry-points."pyri.plugins.service_node_launch"]
pyri-webui-server-launch = "pyri.webui_server.service_node_launch:get_service_node_launch_factory"

[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools',
    'toml',
]

[tool.setuptools.package-data]
'pyri.webui_server'= ['*.html','*.js','*.svg','*.css','*.json']
'pyri.webui_server.webui_static' = ['*.html','*.js','*.svg','*.css','*.json','*.png']